refactor: rename apt-related fields, update test names & add negative tests - Renamed `positiveTest()` to `positivePlotAdFormTest()` in `PlotTests` and `positiveApartmentAdFormTest()` in `ApartmentTests` - Renamed all `apart*` fields and methods in `Apartment` class to `apt*` (e.g. `apartNum` → `aptNum`, `fillApartType()` → `fillAptType()`) - Renamed test methods in `ApartmentTests` that used `apart` prefix to `apt` (e.g. `apartNumStartsWithLetter` → `aptNumStartsWithLetter`) - Added negative tests in `ApartmentTests` for Apartment Floor, Building Floor (House Height), Build Year, Renovated Year, House Type, House State, Warm Systems, and Windows Direction - Improved XPath usage for validation checks using `normalize-space()` and `ancestor::` for precise error targeting